# server/openapi.yaml
@@ -199,6 +199,9 @@ components:
             - firefox
             - webkit
           type: string
+        instance_id:
+          format: uuid
+          type: string
         max_slots:
           format: int32
           maximum: 1024
@@ -511,6 +514,60 @@ paths:
       security:
         - bearer: []
       summary: Heartbeat a worker
+      tags:
+        - Workers
+  /internal/workers/{id}/recycle:
+    post:
+      operationId: recycle-worker
+      parameters:
+        - description: Worker ID
+          in: path
+          name: id
+          required: true
+          schema:
+            description: Worker ID
+            format: uuid
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/RegisteredWorker"
+          description: OK
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unauthorized
+        "404":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Not Found
+        "422":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Unprocessable Entity
+        "500":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Internal Server Error
+        "503":
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Service Unavailable
+      security:
+        - bearer: []
+      summary: Recycle a worker
       tags:
         - Workers
   /internal/workers/{id}/status:
